# axum_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: deploy.yml
src/: error.rs  main.rs  state.rs
src/handlers/: README.md  auth_handler.rs
src/models/: README.md  auth.rs
src/routes/: README.md  mod.rs
src/schemas/: README.md  auth.rs
src/services/: README.md  auth_service.rs  mod.rs  redis_service.rs
