[package]
name = "axum_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }
bcrypt = "0.18"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
